<resources>
    <string name="app_name">Fina Sofom</string>
    <string name="todo">TODO</string>
    <string name="bienvenido">Bienvenido a</string>
    <string name="name">Fina Sofom</string>
    <string name="begin">Comenzar Avaluo</string>


    <string name="nombre">Nombre</string>
    <string name="n_mero_de_contacto">Número de contacto</string>
    <string name="correo_electronico">Correo electronico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
